--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@ body{background:linear-gradient(180deg,#ffd4e5,#ffeef6)}
 </div>
 </div><footer class="max-w-xl mx-auto mt-6 mb-10 p-4 bg-white rounded-2xl shadow text-center text-xs text-gray-500">
 © 2026 FLORES Studios. Todos los derechos reservados.
-</footer><!-- Video TikTok embebido --><div class="max-w-xl mx-auto mb-10 bg-white rounded-2xl shadow-xl border border-pink-300 p-4">
-  <blockquote class="tiktok-embed"
-    cite="https://www.tiktok.com/@floresstudios/video/7582554970243747093"
+</footer><!-- Video TikTok embebido --><div class="max-w-xl mx-auto mb-10 bg-white rounded-2xl shadow-xl border border-pink-300 p-4
     data-video-id="7582554970243747093"
     style="max-width:100%;min-width:325px;">
     <section></section>
